# Snake

./: .gitignore  CMakeLists.txt  README.md
scripts/: build-clang.sh
src/: CMakeLists.txt  game.cc
src/headers/: snake.hpp
src/source/: snake.cpp
